fix: The display position of Denotation was misaligned when scrolling vertically.

--- a/app/assets/stylesheets/ai_annotation.css
+++ b/app/assets/stylesheets/ai_annotation.css
@@ -39,18 +39,15 @@
 }
 
 .textae-container {
+  border-radius: 12px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: 600px;
   margin-top: 40px;
+  overflow-y: scroll;
 
   .textae-editor {
-    overflow: hidden;
-    border: solid 1px #D9D9D9;
-    border-radius: 12px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
-    .textae-editor__body {
-      max-height: 600px;
-      overflow-y: auto;
-    }
+    border-color: #D9D9D9;
+    border-width: 1px;
   }
 }
 
